compiler-core/main/__generate/erlang/snapshots/gleam_core____generate__erlang__tests__integration_test1_1.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests.rs
assertion_line: 221
expression: "pub type Money { Pound(Int) }\npub fn pound(x) { Pound(x) }"
snapshot_kind: text
---
----- SOURCE CODE
pub type Money { Pound(Int) }
pub fn pound(x) { Pound(x) }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([pound/1]).
-export_type([money/0]).

-type money() :: {pound, integer()}.

-file("project/test/my/mod.gleam", 2).
-spec pound(integer()) -> money().
pound(X) ->
    {pound, X}.
