compiler-core/main/__generate/erlang/snapshots/gleam_core____generate__erlang__tests__integration_test1_2.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests.rs
assertion_line: 229
expression: "pub fn loop() { loop() }"
snapshot_kind: text
---
----- SOURCE CODE
pub fn loop() { loop() }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([loop/0]).

-file("project/test/my/mod.gleam", 1).
-spec loop() -> any().
loop() ->
    loop().
