compiler-core/main/__generate/erlang/snapshots/gleam_core____generate__erlang__tests__integration_test1_4.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests.rs
assertion_line: 234
expression: "fn inc(x) { x + 1 }\n                    pub fn go() { 1 |> inc |> inc |> inc }"
snapshot_kind: text
---
----- SOURCE CODE
fn inc(x) { x + 1 }
                    pub fn go() { 1 |> inc |> inc |> inc }

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([go/0]).

-file("project/test/my/mod.gleam", 1).
-spec inc(integer()) -> integer().
inc(X) ->
    X + 1.

-file("project/test/my/mod.gleam", 2).
-spec go() -> integer().
go() ->
    _pipe = 1,
    _pipe@1 = inc(_pipe),
    _pipe@2 = inc(_pipe@1),
    inc(_pipe@2).
