compiler-core/main/__generate/erlang/snapshots/gleam_core____generate__erlang__tests__integration_test21.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests.rs
assertion_line: 388
expression: "\npub fn go(a) {\n  let a = 1\n  a\n}\n\n                    "
snapshot_kind: text
---
----- SOURCE CODE

pub fn go(a) {
  let a = 1
  a
}

                    

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([go/1]).

-file("project/test/my/mod.gleam", 2).
-spec go(any()) -> integer().
go(A) ->
    A@1 = 1,
    A@1.
