compiler-core/main/__generate/erlang/snapshots/gleam_core____generate__erlang__tests__integration_test22.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests.rs
assertion_line: 402
expression: "\npub fn factory(f, i) {\n  f(i)\n}\n\npub type Box {\n  Box(i: Int)\n}\n\npub fn main() {\n  factory(Box, 0)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn factory(f, i) {
  f(i)
}

pub type Box {
  Box(i: Int)
}

pub fn main() {
  factory(Box, 0)
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([factory/2, main/0]).
-export_type([box/0]).

-type box() :: {box, integer()}.

-file("project/test/my/mod.gleam", 2).
-spec factory(fun((J) -> N), J) -> N.
factory(F, I) ->
    F(I).

-file("project/test/my/mod.gleam", 10).
-spec main() -> box().
main() ->
    factory(fun(Field@0) -> {box, Field@0} end, 0).
