compiler-core/main/__generate/erlang/snapshots/gleam_core____generate__erlang__tests__integration_test5.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests.rs
assertion_line: 270
expression: "pub fn tail(list) {\n  case list {\n    [x, ..] -> x\n    _ -> 0\n  }\n}"
snapshot_kind: text
---
----- SOURCE CODE
pub fn tail(list) {
  case list {
    [x, ..] -> x
    _ -> 0
  }
}

----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([tail/1]).

-file("project/test/my/mod.gleam", 1).
-spec tail(list(integer())) -> integer().
tail(List) ->
    case List of
        [X | _] ->
            X;

        _ ->
            0
    end.
